# apger

./: .gitattributes  .gitignore  .gitmodules  COMMANDS.md  CREDENTIAL_MANAGER.md  Makefile  README.md  SCRIPTS.md  apger.conf  ctrl-panel.sh  fix_remaining_f_strings.py  go.mod  go.sum  k8s-manifest-hostpath.yml  k8s-manifest-nfs.yml  k8s-manifest.yml  rdata_toml_fmt.sh  setup-credentials.sh  setup-nfs.sh  test_json_parser.py
.ci/: __init__.py  filesystem_example.yaml  main.py  metadata_example.yaml  pyproject.toml
.ci/engine/: __init__.py  apg_builder.py  build_templates.py  flag_translator.py  json_parser.py  source_downloader.py  toml_parser.py  version_resolver.py
.ci/utils/: __init__.py  logging_utils.py  pgp_signer.py
.github/scripts/: update-readme.py
.github/workflows/: apger-engine.yml  build-packages.yml  deploy_docs.yaml  linter.yml  update-readme.yml  weekly-build.yml
docs/: Doxyfile  Makefile  Makefile.sphinx  conf.py  example.json  index.html  index.rst
docs/custom/: dark-mode-support.css  lfs-style.css
docs/html/: class_8ci_1_1engine_1_1apg__builder_1_1_a_p_g_package_builder-members.html  class_8ci_1_1engine_1_1apg__builder_1_1_a_p_g_package_builder.html  class_8ci_1_1engine_1_1apg__builder_1_1_a_p_g_package_builder.js  class_8ci_1_1engine_1_1build__templates_1_1_build_template-members.html  class_8ci_1_1engine_1_1build__templates_1_1_c_make_template-members.html  class_8ci_1_1engine_1_1build__templates_1_1_c_make_template.js  class_8ci_1_1engine_1_1build__templates_1_1_cargo_template-members.html  class_8ci_1_1engine_1_1build__templates_1_1_cargo_template.html  class_8ci_1_1engine_1_1build__templates_1_1_gradle_template.html  class_8ci_1_1engine_1_1build__templates_1_1_python_p_e_p517_template.html  class_8ci_1_1engine_1_1build__templates_1_1_python_p_e_p517_template.js  class_8ci_1_1engine_1_1json__parser_1_1_j_s_o_n_parser-members.html  class_8ci_1_1engine_1_1json__parser_1_1_j_s_o_n_parser.js  class_8ci_1_1engine_1_1source__downloader_1_1_source_downloader-members.html  class_8ci_1_1engine_1_1source__downloader_1_1_source_downloader.html  class_8ci_1_1engine_1_1version__resolver_1_1_version_resolver-members.html  class_8ci_1_1engine_1_1version__resolver_1_1_version_resolver.html  class_8ci_1_1engine_1_1version__resolver_1_1_version_resolver.js  class_8ci_1_1utils_1_1pgp__signer_1_1_p_g_p_signer.html  classes.html  dir_187d9e52174e21fdd15e390bff99420e.html  dir_187d9e52174e21fdd15e390bff99420e_dep.map  dir_187d9e52174e21fdd15e390bff99420e_dep.md5  dir_264d3cb36883f3d07f0404968ce64c4b.html  dir_8e3f64c82ec978c7f40838d7c59594e4.html  dir_8e3f64c82ec978c7f40838d7c59594e4_dep.map  dir_8e3f64c82ec978c7f40838d7c59594e4_dep.md5  doxygen.css  doxygen_crawl.html  functions.html  graph_legend.html  hierarchy.js  index.html  lfs-style.css  menudata.js  namespaceci_1_1engine_1_1build__templates.html  namespaceci_1_1engine_1_1flag__translator.html  namespaceci_1_1engine_1_1json__parser.html  namespaceci_1_1engine_1_1version__resolver.html  namespaceci_1_1utils.js  (+2 more)
docs/html/html/: annotated.html  annotated_dup.js  class_8ci_1_1engine_1_1build__templates_1_1_autotools_template-members.html  class_8ci_1_1engine_1_1build__templates_1_1_autotools_template.html  class_8ci_1_1engine_1_1build__templates_1_1_autotools_template.js  class_8ci_1_1engine_1_1build__templates_1_1_build_manager-members.html  class_8ci_1_1engine_1_1build__templates_1_1_build_manager.html  class_8ci_1_1engine_1_1build__templates_1_1_build_manager.js  class_8ci_1_1engine_1_1build__templates_1_1_build_template.html  class_8ci_1_1engine_1_1build__templates_1_1_build_template.js  class_8ci_1_1engine_1_1build__templates_1_1_c_make_template.html  class_8ci_1_1engine_1_1build__templates_1_1_cargo_template.js  class_8ci_1_1engine_1_1build__templates_1_1_gradle_template-members.html  class_8ci_1_1engine_1_1build__templates_1_1_gradle_template.js  dir_187d9e52174e21fdd15e390bff99420e.html  (+24 more)
docs/latex/: annotated.tex  class_8ci_1_1engine_1_1build__templates_1_1_autotools_template.tex  class_8ci_1_1engine_1_1build__templates_1_1_build_manager.tex  class_8ci_1_1engine_1_1build__templates_1_1_cargo_template.eps  class_8ci_1_1engine_1_1build__templates_1_1_cargo_template.tex  class_8ci_1_1engine_1_1build__templates_1_1_gradle_template.eps  class_8ci_1_1engine_1_1build__templates_1_1_gradle_template.tex  class_8ci_1_1engine_1_1build__templates_1_1_meson_template.eps  class_8ci_1_1engine_1_1build__templates_1_1_python_p_e_p517_template.eps  class_8ci_1_1engine_1_1build__templates_1_1_python_p_e_p517_template.tex  class_8ci_1_1utils_1_1pgp__signer_1_1_p_g_p_signer.tex  hierarchy.tex  namespaceci_1_1engine.tex  namespaceci_1_1engine_1_1build__templates.tex  namespaceci_1_1engine_1_1flag__translator.tex  namespaces.tex
examples/: metadata.json  metadata.toml  recipe.json  recipe.toml  repodata.json  repodata.toml
log/: error.txt
pub-key/: pub-key.asc
repodata/: switch.json  switch.toml
repodata/extra/: switch-aarch64.toml  switch-x86_64.toml
src/: Meson.build  go.mod  go.sum  k8s-manifest.yaml  meson_options.txt
src/builder/: downloader.go  orchestrator.go  split.go  templates.go
src/core/: config.go  main.go  march.go  publish_target.go  validate.go
src/credentials/: github_app.go  manager.go  validate.go
src/downloader/: downloader.go
src/k8s/: client.go  gen-krnl.go  generator.go
src/logger/: build_logger.go  export.go
src/metadata/: generator.go  recipe_loader.go  scripts.go  types.go
src/pgp/: signer.go
src/publisher/: github.go
src/reporter/: build_report.go
src/settings/: settings.go
src/storage/: packages_db.go  packages_db_bbolt.go  packages_db_sqlite.go  store.go
src/tui/: icons.go  main.go  screen_credentials.go  screen_settings.go
(+304 files in other folders)
